--- a/01-kings-and-pigs-platformer/index.html
+++ b/01-kings-and-pigs-platformer/index.html
@@ -3,4 +3,5 @@
 <canvas></canvas>
 
 <script src="./js/classes/Player.js"></script>
+<script src="./js/eventListeners.js"></script>
 <script src="./app.js"></script>
